<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/titleUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true" />


    <EditText
        android:id="@+id/latitudeUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hint_latitude"
        android:inputType="numberDecimal"
        android:padding="5dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/longitudeUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hint_longitude"
        android:inputType="numberDecimal"
        android:padding="5dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/descriptionUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:hint="@string/hint_description"
        android:padding="5dp"
        android:singleLine="true"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnUpdateItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_update_item"
        android:onClick="updateItem"/>

    <Button
        android:id="@+id/btnDeleteItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete_item"
        android:onClick="deleteItem"/>

    <Button
        android:id="@+id/btnCancelUpdateItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:onClick="cancelUpdateItem"/>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".UpdateRemindMeItemActivity" />

    </FrameLayout>

</LinearLayout>