<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu"
        android:textSize="35dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:orientation="vertical"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/remindMeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remindMeList" />

        <Button
            android:id="@+id/googleMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GoogleMaps" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

    </LinearLayout>



</LinearLayout>
